prevent context menu overflow

--- a/src/components/ContextMenu.module.css
+++ b/src/components/ContextMenu.module.css
@@ -9,6 +9,7 @@
   overflow: hidden;
 
   height: 0;
+  width: 300px;
   animation: enormify 0.3s 1 forwards ease-out;
 
   --image-size: 70px;
